<resources>
    <string name="app_name">lab2</string>
    <string name="plus" translatable="false">+</string>
    <string name="name">Name</string>
    <string name="ready">Ready</string>
    <string name="start">Start</string>
    <string name="work">Work</string>
    <string name="chill">Chill</string>
    <string name="settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="Cycles">Cycles</string>
    <string name="theme">Theme</string>
    <string name="night">night</string>
    <string name="light">light</string>
    <string name="ru">Ru</string>
    <string name="my_data">Clean my data</string>
    <string name="eng">Eng</string>
    <string name="locale">locale</string>
</resources>