<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="com.karpov.lab2.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleeptracker.SleepTrackerFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_semibold"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="32dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="200dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:fontFamily="@font/opensans_semibold"
                                android:gravity="center"
                                android:textSize="21sp" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/save"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="?android:selectableItemBackground"
                            android:scaleType="fitCenter"

                            android:src="@drawable/ic_save" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:text="@string/ready"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/ready_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/ready"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:focusable="false"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="21sp" />

                <ImageButton
                    android:id="@+id/ready_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/work_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/work"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:focusable="false"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="21sp" />

                <ImageButton
                    android:id="@+id/work_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:text="@string/chill"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/chill_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/chill"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:focusable="false"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="21sp" />

                <ImageButton
                    android:id="@+id/chill_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:text="@string/Cycles"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/cycles_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/cycles"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:focusable="false"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="21sp" />

                <ImageButton
                    android:id="@+id/cycles_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape"
                    android:contentDescription="@string/plus"
                    android:padding="7dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="664dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/color_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
